[gd_scene load_steps=7 format=3 uid="uid://bpsrqniuk7pro"]

[ext_resource type="Script" path="res://Scripts/monster.gd" id="1_lblbk"]
[ext_resource type="Texture2D" uid="uid://bxwouiqnj8a4f" path="res://Assets/Enemies1.png" id="2_drkc0"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jk6de"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eedro"]
size = Vector2(85.525, 76.61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5nfe"]
size = Vector2(98.575, 78.495)

[sub_resource type="CircleShape2D" id="CircleShape2D_o58n3"]
radius = 450.0

[node name="Monster" type="CharacterBody2D" groups=["Monster"]]
script = ExtResource("1_lblbk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_jk6de")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_drkc0")
region_enabled = true
region_rect = Rect2(224.221, 28.2361, 85.6872, 78.2361)

[node name="WallCheck" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(57, 0)

[node name="CliffCheck" type="RayCast2D" parent="."]
visible = false
position = Vector2(62, 0)

[node name="ShootCheck" type="RayCast2D" parent="."]
position = Vector2(0, -6)

[node name="HeadDamage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadDamage"]
shape = SubResource("RectangleShape2D_eedro")

[node name="DamagePlayerArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamagePlayerArea"]
shape = SubResource("RectangleShape2D_r5nfe")

[node name="AggroArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
shape = SubResource("CircleShape2D_o58n3")

[node name="ShootTimer" type="Timer" parent="."]
